serious draft ready

--- a/FrontBackmatter/Abstract.tex
+++ b/FrontBackmatter/Abstract.tex
@@ -19,7 +19,7 @@ Secondly, based on the improved procedure, we propose a sampling version of CVaR
 
 Finally, to show the scalability of our method, we propose an approximate Q-learning algorithm by reformulating the CVaR Temporal Difference update rule as a loss function which we later use in a deep learning context.
 
-All proposed methods are experimentally analyzed, using a risk-sensitive gridworld environment for CVaR Value Iteration and Q-learning and a challenging visual environment for the approximate CVaR Q-learning algorithm. All trained agents are able to learn multiple risk-sensitive policies, including the  Deep CVaR Q-learning agent which learns how to avoid risk from raw pixels.
+All proposed methods are experimentally analyzed, using a risk-sensitive gridworld environment for CVaR Value Iteration and Q-learning and a challenging visual environment for the approximate CVaR Q-learning algorithm. All trained agents are able to learn risk-sensitive policies, including the  Deep CVaR Q-learning agent which learns how to avoid risk from raw pixels.
 
 
 
