--- a/classicthesis-config.tex
+++ b/classicthesis-config.tex
@@ -25,7 +25,7 @@
 % (see ClassicThesis.pdf for more information):
 % ****************************************************************************************************
 \PassOptionsToPackage{
-  drafting=true,    % print version information on the bottom of the pages
+  drafting=false,    % print version information on the bottom of the pages
   tocaligned=false, % the left column of the toc will be aligned (no indentation)
   dottedtoc=false,  % page numbers in ToC flushed right
   parts=false,       % use part division
@@ -55,7 +55,7 @@
 \newcommand{\myUni}{Czech Technical University\xspace}
 \newcommand{\myLocation}{Prague\xspace}
 \newcommand{\myTime}{\monthyeardate\today\xspace}
-\newcommand{\myVersion}{version 0.0}
+\newcommand{\myVersion}{version 1.0}
 
 % ********************************************************************
 % Setup, finetuning, and useful commands
