--- a/FrontBackmatter/Abstract.tex
+++ b/FrontBackmatter/Abstract.tex
@@ -23,13 +23,15 @@ All proposed methods are experimentally analyzed, using a risk-sensitive gridwor
 
 
 
-\vfill
-
-\begin{otherlanguage}{czech}
-\pdfbookmark[1]{Abstrakt}{Abstrakt}
-\chapter*{Abstrakt}
-Český abstrakt
-\end{otherlanguage}
+%\newpage
+%
+%\begin{otherlanguage}{czech}
+%\pdfbookmark[1]{Abstrakt}{Abstrakt}
+%\chapter*{Abstrakt}
+%Conditional Value-at-Risk (CVaR) je známá míra rizika používaná ve finančním sektoru po dekády, a která byla přímo ***equated** s robustností, důležitou komponentou bezpečnosti v Umělé Inteligenci (UI). V této diplomové práci se soustředíme na optimalizaci CVaRu v kontextu posilovaného učení, větví strojového učení která *** díky své obecnosti a potenciálu.
+%
+%Naším prvním originálním příspěvkem je rozšíření algoritmu CVaR Value Iteration
+%\end{otherlanguage}
 
 \endgroup
 
