--- a/shortcuts.tex
+++ b/shortcuts.tex
@@ -53,7 +53,7 @@
 \newtheorem{theorem}{Theorem}
 \newtheorem{corollary}{Corollary}
 \newtheorem{lemma}{Lemma}
-\newtheorem{definition}{Definition}
+\newtheorem*{definition}{Definition}
 \newtheorem{proposition}{Proposition}
 
 % ========== refs ===========
