--- a/thesis.tex
+++ b/thesis.tex
@@ -16,11 +16,11 @@
     %\WarningFilter{scrreprt}{Activating an ugly workaround}
     \WarningFilter{titlesec}{Non standard sectioning command detected}
 \documentclass[ 
-				oneside,
-				% twoside,
+				% oneside,
+				twoside,
 				openright,titlepage,numbers=noenddot,headinclude,%1headlines,% letterpaper a4paper
                 footinclude=true,cleardoublepage=empty,abstractoff, % <--- obsolete, remove (todo)
-                BCOR=5mm,paper=a4,fontsize=11pt,%11pt,a4paper,%
+                BCOR=25mm,paper=a4,fontsize=11pt,%11pt,a4paper,%
                 czech,american,%
                 ]{scrreprt}
 
@@ -30,7 +30,10 @@
 \input{shortcuts}
 \input{classicthesis-config}
 \usepackage{pdfpages}
-
+\usepackage{layout}
+\setlength{\marginparwidth}{0pt}
+%\setlength{\oddsidemargin}{49pt} 
+%\setlength{\evensidemargin}{3pt} 
 %\SetSymbolFont{operators}   {normal}{OT1}{cmr} {m}{n}
 %\SetSymbolFont{letters}     {normal}{OML}{cmm} {m}{it}
 %\SetSymbolFont{symbols}     {normal}{OMS}{cmsy}{m}{n}
@@ -53,7 +56,6 @@
 % Bibliographies
 %*******************************************************
 \addbibresource{Bibliography.bib}
-\addbibresource[label=ownpubs]{AMiede_Publications.bib}
 
 %********************************************************************
 % Hyphenation
@@ -64,6 +66,7 @@
 % GO!GO!GO! MOVE IT!
 %*******************************************************
 \begin{document}
+%\layout
 \frenchspacing
 \raggedbottom
 \selectlanguage{american} % american ngerman
