--- a/FrontBackmatter/Contents.tex
+++ b/FrontBackmatter/Contents.tex
@@ -59,14 +59,14 @@
     % Acronyms
     %*******************************************************
     %\phantomsection
-    \refstepcounter{dummy}
-    \pdfbookmark[1]{Acronyms}{acronyms}
-    \markboth{\spacedlowsmallcaps{Acronyms}}{\spacedlowsmallcaps{Acronyms}}
-    \chapter*{Acronyms}
-    \begin{acronym}[UMLX]
-        \acro{DRY}{Don't Repeat Yourself}
-        \acro{API}{Application Programming Interface}
-        \acro{UML}{Unified Modeling Language}
-    \end{acronym}
+%    \refstepcounter{dummy}
+%    \pdfbookmark[1]{Acronyms}{acronyms}
+%    \markboth{\spacedlowsmallcaps{Acronyms}}{\spacedlowsmallcaps{Acronyms}}
+%    \chapter*{Acronyms}
+%    \begin{acronym}[UMLX]
+%        \acro{DRY}{Don't Repeat Yourself}
+%        \acro{API}{Application Programming Interface}
+%        \acro{UML}{Unified Modeling Language}
+%    \end{acronym}
 
 \endgroup
