--- a/FrontBackmatter/Titlepage.tex
+++ b/FrontBackmatter/Titlepage.tex
@@ -10,6 +10,8 @@
         \hfill
 
         \vfill
+        
+        \spacedlowsmallcaps{Master's Thesis} \\ \bigskip
 
         \begingroup
             \color{Maroon}\spacedallcaps{\myTitle} \\ \bigskip
@@ -35,5 +37,8 @@
         \vfill
 
     \end{center}
+    \spacedlowsmallcaps{Supervisor:} \mySupervisor\\
+    \spacedlowsmallcaps{Field of study:} \myField\\
+    \spacedlowsmallcaps{Subfield:} \mySubfield
   %\end{addmargin}
 \end{titlepage}
