--- a/classicthesis-config.tex
+++ b/classicthesis-config.tex
@@ -47,11 +47,11 @@
 \newcommand{\mySubtitle}{a CVaR Optimization Approach\xspace}
 \newcommand{\myDegree}{Engineer (Ing.)\xspace}
 \newcommand{\myName}{Silvestr Stanko\xspace}
-\newcommand{\myProf}{Put name here\xspace}
-\newcommand{\myOtherProf}{Put name here\xspace}
-\newcommand{\mySupervisor}{Put name here\xspace}
+\newcommand{\mySupervisor}{Mgr. et Mgr. Karel Macek Ph.D.\xspace}
 \newcommand{\myFaculty}{Faculty of Electrical Engineering\xspace}
 \newcommand{\myDepartment}{Department of Computer Science\xspace}
+\newcommand{\myField}{Open Informatics\xspace}
+\newcommand{\mySubfield}{Artificial Intelligence\xspace}
 \newcommand{\myUni}{Czech Technical University\xspace}
 \newcommand{\myLocation}{Prague\xspace}
 \newcommand{\myTime}{\monthyeardate\today\xspace}
