--- a/FrontBackmatter/Acknowledgments.tex
+++ b/FrontBackmatter/Acknowledgments.tex
@@ -10,28 +10,12 @@
 \let\cleardoublepage\relax
 \let\cleardoublepage\relax
 \chapter*{Acknowledgments}
-Put your acknowledgments here.
 
-Many thanks to everybody who already sent me a postcard!
+I would like to express gratitude towards my supervisor Dr. Karel Macek for motivating the thesis, constant encouragement and optimism, and for letting me independently shape the thesis topic.
 
-Regarding the typography and other help, many thanks go to Marco 
-Kuhlmann, Philipp Lehman, Lothar Schlesier, Jim Young, Lorenzo 
-Pantieri and Enrico Gregorio\footnote{Members of GuIT (Gruppo 
-Italiano Utilizzatori di \TeX\ e \LaTeX )}, J\"org Sommer, 
-Joachim K\"ostler, Daniel Gottschlag, Denis Aydin, Paride 
-Legovini, Steffen Prochnow, Nicolas Repp, Hinrich Harms, 
-Roland Winkler, Jörg Weber, Henri Menke, Claus Lahiri, 
-Clemens Niederberger, Stefano Bragaglia, Jörn Hees, 
-Scott Lowe, Dave Howcroft, 
-and the whole \LaTeX-community for support, ideas and 
-some great software.
+Computational resources were provided by the CESNET LM2015042 and the CERIT Scientific Cloud LM2015085, provided under the programme "Projects of Large Research, Development, and Innovations Infrastructures".
 
-\bigskip
-
-\noindent\emph{Regarding \mLyX}: The \mLyX\ port was intially done by
-\emph{Nicholas Mariette} in March 2009 and continued by
-\emph{Ivo Pletikosi\'c} in 2011. Thank you very much for your
-work and for the contributions to the original style.
+Last but not least, I would like to thank my parents and my grandfather for their continued financial and other support during my delayed studies.
 
 
 \endgroup
