towards final presentation

--- a/presentation/pres.tex
+++ b/presentation/pres.tex
@@ -277,8 +277,8 @@ This iteration can be formulated and solved as a linear program.
 
 
 \begin{frame}
-\center
-\includegraphics[width=0.8\linewidth]{../gfx/exactvarcvar.pdf}
+%\center
+%\includegraphics[width=0.8\linewidth]{../gfx/exactvarcvar.pdf}
 \end{frame}
 
 
